--- a/frontend/index.html
+++ b/frontend/index.html
@@ -211,7 +211,7 @@
         footer a {
             color: #ffffff;
             text-decoration: none;
-            font-size: 0.95em;
+            font-size: 1.1em;
         }
 
         footer a:hover {
@@ -222,10 +222,11 @@
         footer h3 {
             color: #ffffff;
             margin-bottom: 15px;
+            font-size: 1.4em;
         }
 
         footer p {
-            font-size: 0.95em;
+            font-size: 1.1em;
             line-height: 1.6;
         }
 
@@ -234,7 +235,7 @@
             margin-top: 40px;
             border-top: 1px solid rgba(255, 255, 255, 0.2);
             padding-top: 15px;
-            font-size: 0.85em;
+            font-size: 1em;
         }
 
         /* HEADER OVERLAP */
@@ -360,15 +361,8 @@
                 <h3>Contact</h3>
                 <p>
                     Email:
-                    <a href="mailto:support@folio2resume.com">
-                        support@folio2resume.com
-                    </a>
-                </p>
-
-                <p>
-                    Phone:
-                    <a href="tel:+919876543210">
-                        +91 98765 43210
+                    <a href="mailto:battunagaroopini@gmail.com">
+                        battunagaroopini@gmail.com
                     </a>
                 </p>
 
