--- a/frontend/verify-otp.html
+++ b/frontend/verify-otp.html
@@ -38,7 +38,7 @@
             }
 
             try {
-                const response = await fetch(`http://localhost:8080/api/auth/verify-otp?email=${email}&otp=${entered}`, {
+                const response = await fetch(`https://folio2resume-backend.onrender.com/api/auth/verify-otp?email=${email}&otp=${entered}`, {
                     method: "POST"
                 });
 
