--- a/frontend/forgot-password.html
+++ b/frontend/forgot-password.html
@@ -45,7 +45,7 @@
       msg.style.display = "block";
 
       try {
-        const res = await fetch("http://localhost:8080/api/auth/send-otp?email=" + email, {
+        const res = await fetch("https://folio2resume-backend.onrender.com/api/auth/send-otp?email=" + email, {
           method: "POST"
         });
 
