--- a/frontend/reset-password.html
+++ b/frontend/reset-password.html
@@ -58,7 +58,7 @@
             }
 
             try {
-                const response = await fetch(`http://localhost:8080/api/auth/reset-password?email=${email}&newPassword=${newP}`, {
+                const response = await fetch(`https://folio2resume-backend.onrender.com/api/auth/reset-password?email=${email}&newPassword=${newP}`, {
                     method: "POST"
                 });
 
