--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -158,7 +158,7 @@
             }
 
             try {
-                const response = await fetch(`http://localhost:8080/api/auth/update-profile/${currentUser.id}`, {
+                const response = await fetch(`https://folio2resume-backend.onrender.com/api/auth/update-profile/${currentUser.id}`, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ name: newName })
