--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -217,7 +217,7 @@
             }
 
             try {
-                const response = await fetch(`http://localhost:8080/api/auth/change-password/${currentUser.id}`, {
+                const response = await fetch(`https://folio2resume-backend.onrender.com/api/auth/change-password/${currentUser.id}`, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ oldPassword: oldPass, newPassword: newPass })
@@ -261,7 +261,7 @@
             }
 
             try {
-                const response = await fetch(`http://localhost:8080/api/auth/delete-account/${currentUser.id}`, {
+                const response = await fetch(`https://folio2resume-backend.onrender.com/api/auth/delete-account/${currentUser.id}`, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ password: pass })
