--- a/frontend/change-password.html
+++ b/frontend/change-password.html
@@ -77,7 +77,7 @@
             }
 
             try {
-                const response = await fetch(`http://localhost:8080/api/auth/change-password/${userId}`, {
+                const response = await fetch(`https://folio2resume-backend.onrender.com/api/auth/change-password/${userId}`, {
                     method: "POST",
                     headers: {
                         "Content-Type": "application/json"
