--- a/frontend/home.html
+++ b/frontend/home.html
@@ -37,7 +37,7 @@
 
         <div class="templates">
             <div class="template" onclick="selectPortfolio('student')">
-                <img src="https://images.unsplash.com/photo-1523240795612-9a054b0db644">
+                <img src="images/student.jpg">
                 <h3>Student Portfolio</h3>
             </div>
 
