--- a/frontend/saved-resumes.html
+++ b/frontend/saved-resumes.html
@@ -84,7 +84,7 @@
       if (!userId) return;
 
       try {
-        const res = await fetch(`http://localhost:8080/api/resume/user/${userId}`);
+        const res = await fetch(`https://folio2resume-backend.onrender.com/api/resume/user/${userId}`);
         resumes = await res.json();
         render();
       } catch (e) {
@@ -168,7 +168,7 @@
 
       const id = resumeToDelete;
       try {
-        const res = await fetch(`http://localhost:8080/api/resume/delete/${id}`, { method: "DELETE" });
+        const res = await fetch(`https://folio2resume-backend.onrender.com/api/resume/delete/${id}`, { method: "DELETE" });
         if (res.ok) {
           resumes = resumes.filter(r => r.id !== id);
           render();
