--- a/frontend/home.html
+++ b/frontend/home.html
@@ -47,7 +47,7 @@
             </div>
 
             <div class="template writer" onclick="selectPortfolio('writer')">
-                <img src="https://images.unsplash.com/photo-1501504905252-473c47e087f8">
+                <img src="images/writer.jpg">
                 <h3>Writer Portfolio</h3>
             </div>
         </div>
