--- a/frontend/home.html
+++ b/frontend/home.html
@@ -42,7 +42,7 @@
             </div>
 
             <div class="template" onclick="selectPortfolio('chef')">
-                <img src="https://tse1.mm.bing.net/th/id/OIP.3ZOrhGsfQVNDHYviawj12QHaE7">
+                <img src="images/writer.jpg">
                 <h3>Chef Portfolio</h3>
             </div>
 
