--- a/frontend/home.html
+++ b/frontend/home.html
@@ -42,7 +42,7 @@
             </div>
 
             <div class="template" onclick="selectPortfolio('chef')">
-                <img src="images/writer.jpg">
+                <img src="images/chef.jpg">
                 <h3>Chef Portfolio</h3>
             </div>
 
